@@ -1,0 +1,11 @@
+package com.hifiremote.jp1;
+
+/**
+ * Interface for ProgressUpdater
+ *
+ * @author Marcin Jaworski
+ */
+public interface ProgressUpdater
+{
+  void updateProgress( int value );
+}
